added h1 and p tags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
  <body>
+<h1>This is the headline for my website!</h1>
+   	<p>This is a sentence that is inside paragraph tags.</p>
 
  </body>
 </html>
