--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <body>
 <h1>This is the headline for my website!</h1>
-   	<p>This is a sentence that is inside paragraph tags.</p>
+  <p>This is a <b>sentence</b> that is inside <u>paragraph tags</u>.</p>
 
  </body>
 </html>
