added a link to processing

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <body>
 <h1>This is the headline for my website!</h1>
   <p>This is a <b>sentence</b> that is inside <u>paragraph tags</u>.</p>
+  <p><a href="https://processing.org/">Check out Processing</a></p>
 
  </body>
 </html>
