--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <h1>This is the headline for my website!</h1>
   <p>This is a <b>sentence</b> that is inside <u>paragraph tags</u>.</p>
   <p><a href="https://processing.org/">Check out Processing</a></p>
+  
+  <p><img src="https://3.bp.blogspot.com/-enXse4F7t94/U5hpR5fivsI/AAAAAAAABl8/n6Pc81-GYno/s1600/Java+logo+good.png" alt="Java Logo" style="width:200px;height:200px;"></p>
 
  </body>
 </html>
