--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <body>
 <h1>Click an image to see the program</h1>
-  <p><a href="https://sgolanka.github.io/HolidaysP5/">Check out Happy Holidays</a></p>
+  <p><a href="https://sgolanka.github.io/HolidaysP5/"><img src="/img/hh.png"</img></a></p>
 
  </body>
 </html>
