added image dimensions

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <body>
 <h1>Click an image to see the program</h1>
-  <p><a href="https://sgolanka.github.io/HolidaysP5/"><img src="img/hh.png" alt="Happy Holidays Image"></a></p>
+  <p><a href="https://sgolanka.github.io/HolidaysP5/"><img src="img/hh.png" alt="Happy Holidays Image" width="50" height="60"></a></p>
 
  </body>
 </html>
