--- a/index.html
+++ b/index.html
@@ -2,7 +2,20 @@
 <html>
  <body>
 <h1>Click an image to see the program</h1>
-  <p><a href="https://sgolanka.github.io/HolidaysP5/"><img src="img/hh.png" alt="Happy Holidays Image" width="50" height="60"></a></p>
+  <table>
+  <tr>
+    <td><a href="https://sgolanka.github.io/HolidaysP5/"><img src="img/hh.png" alt="Happy Holidays Image" width="50" height="60"></a</td>
+    <td><a href="https://sgolanka.github.io/HolidaysP5/"><img src="img/cs.png" alt="Happy Holidays Image" width="50" height="60"></a</td>
+    <td><a href="https://sgolanka.github.io/HolidaysP5/"><img src="img/cs.png" alt="Happy Holidays Image" width="50" height="60"></a></td>
+  </tr>
+  <tr>
+    <td><a href="https://sgolanka.github.io/HolidaysP5/"><img src="img/cs.png" alt="Happy Holidays Image" width="50" height="60"></a></td>
+    <td><a href="https://sgolanka.github.io/HolidaysP5/"><img src="img/cs.png" alt="Happy Holidays Image" width="50" height="60"></a></td>
+    <td><a href="https://sgolanka.github.io/HolidaysP5/"><img src="img/cs.png" alt="Happy Holidays Image" width="50" height="60"></a></td>
+  </tr>
+</table>
+  </table>
+  
 
  </body>
 </html>
