--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+ <head>
+  <link rel="stylesheet" type="text/css" href="style.css">
+ </head>
  <body>
 <h1>Click an image to see the program</h1>
   <table>
